Fixed the background going from white to gray, suddenly, if the page's height stretched too high

--- a/app/globals.scss
+++ b/app/globals.scss
@@ -9,12 +9,7 @@
 }
 
 body {
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background: white;
 
   font-family: "Roboto", sans-serif;
 }
